--- a/guide_agent/Makefile
+++ b/guide_agent/Makefile
@@ -1,5 +1,18 @@
-all: 
-	@echo "TODO: make guide_agent..."
+# Makefile for Guide Agent
+#
+# Drew Waterman (Team Lapis), May 2016
+
+
+CFLAGS = -Wall -pedantic -std=c11 -ggdb
+MAKE = make
+
+all: guide
+
+
+guide: guide.o
+	gcc $(CFLAGS) -o guide guide.c
+
 
 clean:
-	@echo "TODO: make clean guide_agent..."
+	rm -f *~
+	rm -f *.o
