implementation for guide agent

--- a/guide_agent/Makefile
+++ b/guide_agent/Makefile
@@ -4,13 +4,14 @@
 
 
 CFLAGS = -Wall -pedantic -std=c11 -ggdb
+GTKFLAGS = `pkg-config --cflags --libs gtk+-3.0` 
 MAKE = make
 
 all: guide
 
 
 guide: guide.o
-	gcc $(CFLAGS) -o guide guide.c ../common/file.c ../common/file.h
+	gcc  $(CFLAGS) -o guide guide.c ../common/file.c ../common/file.h 
 
 
 clean:
