Glib-GIO-CRITICAL errors

--- a/guide_agent/Makefile
+++ b/guide_agent/Makefile
@@ -4,14 +4,22 @@
 
 
 CFLAGS = -Wall -pedantic -std=c11 -ggdb
+PROG = guide
+OBJS = guide.o
 GTKFLAGS = `pkg-config --cflags --libs gtk+-3.0` 
 MAKE = make
 
-all: guide
+$(PROG): $(OBJS)
+	gcc $(CFLAGS) $^ $(GTKFLAGS) -o $@
+
+# all: guide
 
 
-guide: guide.o
-	gcc  $(CFLAGS) -o guide guide.c ../common/file.c ../common/file.h 
+# guide: guide.o
+# 	mygcc $(GTKFLAGS) -o guide guide.c ../common/file.c ../common/file.h
+
+guide.o: ../common/file.c ../common/file.h 
+
 
 
 clean:
