just keep swimming

--- a/guide_agent/Makefile
+++ b/guide_agent/Makefile
@@ -6,19 +6,19 @@
 CFLAGS = -Wall -pedantic -std=c11 -ggdb
 PROG = guide
 OBJS = guide.o
-GTKFLAGS = `pkg-config --cflags --libs gtk+-3.0` 
+###GTKFLAGS = `pkg-config --cflags --libs gtk+-3.0` 
 MAKE = make
 
-$(PROG): $(OBJS)
-	gcc $(CFLAGS) $^ $(GTKFLAGS) -o $@
+# $(PROG): $(OBJS)
+# 	gcc $(CFLAGS) $^ $(GTKFLAGS) -o $@
 
-# all: guide
+all: guide
 
 
-# guide: guide.o
-# 	mygcc $(GTKFLAGS) -o guide guide.c ../common/file.c ../common/file.h
+guide: guide.o
+	gcc $(CFLAGS) -o guide guide.c ../common/file.c ../common/file.h ../lib/list/list.h ../lib/list/list.c ../lib/bag/bag.h ../lib/bag/bag.c
 
-guide.o: ../common/file.c ../common/file.h 
+#guide.o: ../common/file.c ../common/file.h 
 
 
 
