before working on graphics

--- a/guide_agent/Makefile
+++ b/guide_agent/Makefile
@@ -3,23 +3,29 @@
 # Drew Waterman (Team Lapis), May 2016
 
 
-CFLAGS = -Wall -pedantic -std=c11 -ggdb
+CFLAGS = -Wall -pedantic -std=c99 -ggdb
 PROG = guide
-OBJS = guide.o
-###GTKFLAGS = `pkg-config --cflags --libs gtk+-3.0` 
+OBJS = ../common/file.o ../lib/list/list.o ../lib/bag/bag.o ../lib/counters/counters.o guide.o
+GTKFLAGS =`pkg-config --cflags --libs gtk+-3.0`
 MAKE = make
 
 # $(PROG): $(OBJS)
 # 	gcc $(CFLAGS) $^ $(GTKFLAGS) -o $@
 
-all: guide
-
 
 guide: guide.o
-	gcc $(CFLAGS) -o guide guide.c ../common/file.c ../common/file.h ../lib/list/list.h ../lib/list/list.c ../lib/bag/bag.h ../lib/bag/bag.c
+# 	gcc $(CFLAGS)  $(GTKFLAGS) guide.o ../common/file.o ../lib/list/list.o ../lib/bag/bag.o ../lib/counters/counters.o -o guide
+	 gcc $(CFLAGS) -o guide guide.c ../common/file.c ../common/file.h ../lib/list/list.h ../lib/list/list.c ../lib/bag/bag.h ../lib/bag/bag.c ../lib/counters/counters.h
 
-#guide.o: ../common/file.c ../common/file.h 
+#guide.o: guide.c 
 
+../common/file.o: ../common/file.c ../common/file.h
+
+../lib/list/list.o: ../lib/list/list.c ../lib/list/list.h
+
+../lib/bag/bag.o: ../lib/bag/bag.h ../lib/bag/bag.c
+
+../lib/counters/counters.o: ../lib/counters/counters.c ../lib/counters/counters.h
 
 
 clean:
