--- a/common/Makefile
+++ b/common/Makefile
@@ -1,24 +1,25 @@
-# Makefile  for 'common' module
+# Makefile for 'common' library
+# Builds and compiles all the data structures into a library.
 #
-# Divya Kalidindi and Drew Waterman, April 2016
-
+# Shirley Zhang, Nicole Chen, April 2016
+L = ../lib
+C = ../common
+OBJS = word.o file.o $(L)/counters/counters.o
 LIB = common.a
-OBJS = web.o word.o file.o
-
 CFLAGS = -Wall -pedantic -std=c11 -ggdb
 CC = gcc
 MAKE = make
 
-# build the common.a
 $(LIB): $(OBJS)
 	ar cr $@ $^
 
-# common.a source dependencies
-web.o: web.c web.h
-word.o: word.c word.h
+# add other targets for the other .o files
+
+word.o: word.c word.h 
+
 file.o: file.c file.h
 
-# clean up
+# add cleanup commands for other subdirectories
 clean:
 	rm -f *~
 	rm -f *.o
